fix blog image and profile photo size on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,6 @@ p {
 
     .photo {
         width: 100% !important;
-        padding-bottom: 2rem;
     }
 
     .footer-links {
@@ -143,13 +142,16 @@ p {
     }
 }
 
+@media screen and (max-width: 767px) {
+    .photo {
+        width: 50% !important;
+        padding-bottom: 2rem;
+    }
+}
+
 @media screen and (min-width: 320px) and (max-width: 375px) {
     h1 {
         font-size: 20px;
-    }
-
-    .title {
-        border: none;
     }
 
     .footer-links {
